<resources>

    <string name="app_name">오픈모아</string>
    <string name="key_araea">ㆍ</string>
    <string name="key_area_select">영역선택</string>
    <string name="key_arrow">방향키</string>
    <string name="key_asterisk">*</string>
    <string name="key_backspace">⇦</string>
    <string name="key_bieup">ㅂ</string>
    <string name="key_caret">^</string>
    <string name="key_chieut">ㅊ</string>
    <string name="key_comma_question_dot_exclamation">,\n? . !</string>
    <string name="key_copy">복사</string>
    <string name="key_copy_all">전체 복사</string>
    <string name="key_copy_all_two_line">전체\n복사</string>
    <string name="key_cut">자르기</string>
    <string name="key_cut_all">전체 자르기</string>
    <string name="key_cut_all_two_line">전체\n자르기</string>
    <string name="key_delete">지우기</string>
    <string name="key_digeut">ㄷ</string>
    <string name="key_dot">.</string>
    <string name="key_down">▼</string>
    <string name="key_eight">8</string>
    <string name="key_eu">ㅡ</string>
    <string name="key_emoji">😀</string>
    <string name="key_emoji_close">⌨</string>
    <string name="key_end">끝으로</string>
    <string name="key_enter">⏎</string>
    <string name="key_five">5</string>
    <string name="key_four">4</string>
    <string name="key_giyeok">ㄱ</string>
    <string name="key_hanja_number_punctuation">12/기</string>
    <string name="key_hanja_hint">漢</string>
    <string name="key_hieut">ㅎ</string>
    <string name="key_home">처음으로</string>
    <string name="key_i">ㅣ</string>
    <string name="key_ieung">ㅇ</string>
    <string name="key_jieut">ㅈ</string>
    <string name="key_kieuk">ㅋ</string>
    <string name="key_language">한/영</string>
    <string name="key_left">◀</string>
    <string name="key_mieum">ㅁ</string>
    <string name="key_minus">-</string>
    <string name="key_next_format">%d/%d</string>
    <string name="key_nieun">ㄴ</string>
    <string name="key_nine">9</string>
    <string name="key_one">1</string>
    <string name="key_one_two_three">123</string>
    <string name="key_paste">붙이기</string>
    <string name="key_pieup">ㅍ</string>
    <string name="key_plus">+</string>
    <string name="key_punctuation">기호</string>
    <string name="key_rieul">ㄹ</string>
    <string name="key_right">▶</string>
    <string name="key_select_all">전체 선택</string>
    <string name="key_select_all_two_line">전체\n선택</string>
    <string name="key_semicolon">;</string>
    <string name="key_seven">7</string>
    <string name="key_siot">ㅅ</string>
    <string name="key_six">6</string>
    <string name="key_slash︎">/</string>
    <string name="key_space">⎵</string>
    <string name="key_ssangbieup">ㅃ</string>
    <string name="key_ssangdigeut">ㄸ</string>
    <string name="key_ssanggiyeok">ㄲ</string>
    <string name="key_ssangjieut">ㅉ</string>
    <string name="key_ssangsiot">ㅆ</string>
    <string name="key_three">3</string>
    <string name="key_tieut">ㅌ</string>
    <string name="key_tilde">~</string>
    <string name="key_two">2</string>
    <string name="key_up">▲</string>
    <string name="key_zero">0</string>

    <string name="key_exclamation">!</string>
    <string name="key_question">?</string>
    <string name="key_moeum">ㅣ·ㅡ</string>

    <string name="key_language_settings_hint">설정</string>
    <string name="settings_title">오픈모아 통합키보드 설정</string>
    <string name="settings_hangul_section">한글설정</string>
    <string name="settings_hangul_input_mode_title">한글 입력 방식 선택</string>
    <string name="settings_input_mode_moakey">모아키</string>
    <string name="settings_input_mode_two_hand_moakey">양손 모아키(기본)</string>

    <string name="settings_keyboard_section">키보드 옵션</string>
    <string name="settings_keypad_height_title">키패드 높이 조절</string>
    <string name="settings_keypad_height_normal">높게</string>
    <string name="settings_keypad_height_low">보통(기본)</string>
    <string name="settings_keypad_height_very_low">낮게</string>
    <string name="settings_one_hand_mode_title">한손 입력모드 설정</string>
    <string name="settings_one_hand_mode_none">사용안함(기본)</string>
    <string name="settings_one_hand_mode_left">왼손 사용</string>
    <string name="settings_one_hand_mode_right">오른손 사용</string>
    <string name="settings_one_hand_mode_center">가운데 정렬</string>
    <string name="settings_long_press_time_title">길게 누름 시간 설정</string>
    <string name="settings_long_press_time_200">0.2초</string>
    <string name="settings_long_press_time_300">0.3초</string>
    <string name="settings_long_press_time_500">0.5초(기본)</string>
    <string name="settings_long_press_time_1000">1.0초</string>
    <string name="settings_long_press_time_1500">1.5초</string>
    <string name="settings_key_preview_title">키 입력 미리보기</string>
    <string name="settings_space_long_press_title">스페이스 길게 누름 기능</string>
    <string name="settings_space_long_press_arrow">방향키 레이아웃 표시</string>
    <string name="settings_space_long_press_ime_picker">키보드 선택(기본)</string>
    <string name="settings_space_long_press_switch_language">언어 전환</string>
    <string name="settings_space_long_press_none">없음</string>
    <string name="settings_keyboard_skin_title">키보드 스킨</string>
    <string name="settings_keyboard_skin_white">화이트(기본)</string>
    <string name="settings_keyboard_skin_dark_gray">다크그레이</string>
    <string name="settings_keyboard_skin_black">블랙</string>
    <string name="settings_keyboard_skin_blue">블루</string>
    <string name="settings_keyboard_skin_green">그린</string>
    <string name="settings_auto_space_period_title">자동 마침표 입력</string>
    <string name="settings_auto_space_period_description">스페이스 바를 두 번 눌러 마침표를 자동으로 입력합니다</string>
    <string name="settings_auto_capitalize_english_title">영문 자동 대문자</string>
    <string name="settings_auto_capitalize_english_description">영문 키보드에서 문장 첫 글자를 자동으로 대문자로 입력합니다</string>
    <string name="settings_enter_long_press_title">엔터 길게 누름 기능</string>
    <string name="settings_enter_long_press_arrow">방향키 레이아웃 표시(기본)</string>
    <string name="settings_enter_long_press_ime_picker">키보드 선택</string>
    <string name="settings_enter_long_press_switch_language">언어 전환</string>
    <string name="settings_enter_long_press_none">없음</string>

    <string name="settings_quick_phrase_section">한글 단축키 설정</string>
    <string name="settings_quick_phrase_kieuk_label">ㅋ 단축키</string>
    <string name="settings_quick_phrase_tieut_label">ㅌ 단축키</string>
    <string name="settings_quick_phrase_chieut_label">ㅊ 단축키</string>
    <string name="settings_quick_phrase_pieup_label">ㅍ 단축키</string>
    <string name="settings_quick_phrase_ssangbieup_label">ㅃ 단축키</string>
    <string name="settings_quick_phrase_ssangjieut_label">ㅉ 단축키</string>
    <string name="settings_quick_phrase_ssangdigeut_label">ㄸ 단축키</string>
    <string name="settings_quick_phrase_ssanggiyeok_label">ㄲ 단축키</string>
    <string name="settings_quick_phrase_ssangsiot_label">ㅆ 단축키</string>
    <string name="settings_quick_phrase_edit_hint">단축키를 입력하세요</string>
    <string name="settings_quick_phrase_reset">기본값</string>
    <string name="settings_qwerty_long_key_section">영문 단축키 설정</string>
    <string name="settings_qwerty_long_key_z_label">z 단축키</string>
    <string name="settings_qwerty_long_key_x_label">x 단축키</string>
    <string name="settings_qwerty_long_key_c_label">c 단축키</string>
    <string name="settings_qwerty_long_key_v_label">v 단축키</string>
    <string name="settings_qwerty_long_key_b_label">b 단축키</string>
    <string name="settings_qwerty_long_key_n_label">n 단축키</string>
    <string name="settings_qwerty_long_key_m_label">m 단축키</string>
    <string name="settings_qwerty_long_key_edit_hint">단축키를 입력하세요</string>
    <string name="settings_qwerty_long_key_reset">기본값</string>
<string name="settings_qwerty_long_key_save">저장</string>
    <string name="settings_qwerty_long_key_cancel">취소</string>

    <string name="settings_data_section">설정 데이터 저장 및 초기화</string>
    <string name="settings_data_export_title">설정 데이터 내보내기</string>
    <string name="settings_data_export_description">사용자가 설정한 모아키 설정상태를 단말에 저장합니다.</string>
    <string name="settings_data_import_title">설정 데이터 가져오기</string>
    <string name="settings_data_import_description">이전에 사용자가 단말에 저장한 모아키 설정상태로 복구합니다.</string>
    <string name="settings_data_reset_title">설정 데이터 초기화</string>
    <string name="settings_data_reset_description">모아키 설정상태를 초기설치 상태로 초기화합니다.</string>
    <string name="settings_data_export_success">설정을 저장했습니다.</string>
    <string name="settings_data_export_fail">저장에 실패했습니다.</string>
    <string name="settings_data_import_success">설정을 복구했습니다.</string>
    <string name="settings_data_import_fail">불러오기에 실패했습니다. 저장된 파일이 없거나 손상되었습니다.</string>
    <string name="settings_data_reset_confirm">모든 설정을 초기화하시겠습니까?</string>
    <string name="settings_data_reset_success">설정을 초기화했습니다.</string>

    <string name="quick_phrase_menu_edit">수정</string>
    <string name="quick_phrase_menu_cancel">취소</string>
    <string name="quick_phrase_edit_title">단축키 수정</string>
    <string name="quick_phrase_edit_key_label">단축키</string>
    <string name="quick_phrase_edit_content_label">내용</string>
    <string name="user_char_edit_title">사용자 문자 변경</string>

</resources>