<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- First Line -->

    <TextView
        android:id="@+id/plusKey"
        style="@style/KeyStyle"
        android:text="@string/key_plus"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/asteriskKey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/oneKey"/>

    <TextView
        android:id="@+id/oneKey"
        style="@style/KeyStyle"
        android:text="@string/key_one"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="@+id/plusKey"
        app:layout_constraintBottom_toBottomOf="@+id/plusKey"
        app:layout_constraintLeft_toRightOf="@+id/plusKey"
        app:layout_constraintRight_toLeftOf="@+id/twoKey" />

    <TextView
        android:id="@+id/twoKey"
        style="@style/KeyStyle"
        android:text="@string/key_two"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="@+id/plusKey"
        app:layout_constraintBottom_toBottomOf="@+id/plusKey"
        app:layout_constraintLeft_toRightOf="@+id/oneKey"
        app:layout_constraintRight_toLeftOf="@+id/threeKey" />

    <TextView
        android:id="@+id/threeKey"
        style="@style/KeyStyle"
        android:text="@string/key_three"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="@+id/plusKey"
        app:layout_constraintBottom_toBottomOf="@+id/plusKey"
        app:layout_constraintLeft_toRightOf="@+id/twoKey"
        app:layout_constraintRight_toLeftOf="@+id/minusKey" />

    <TextView
        android:id="@+id/minusKey"
        style="@style/KeyStyle"
        android:text="@string/key_minus"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="@+id/plusKey"
        app:layout_constraintBottom_toBottomOf="@+id/plusKey"
        app:layout_constraintLeft_toRightOf="@+id/threeKey"
        app:layout_constraintRight_toRightOf="parent" />

    <!-- Second Line -->

    <TextView
        android:id="@+id/asteriskKey"
        style="@style/KeyStyle"
        android:text="@string/key_asterisk"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/plusKey"
        app:layout_constraintBottom_toTopOf="@+id/slashKey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/fourKey" />

    <TextView
        android:id="@+id/fourKey"
        style="@style/KeyStyle"
        android:text="@string/key_four"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="@+id/asteriskKey"
        app:layout_constraintBottom_toBottomOf="@+id/asteriskKey"
        app:layout_constraintLeft_toRightOf="@+id/asteriskKey"
        app:layout_constraintRight_toLeftOf="@+id/fiveKey" />

    <TextView
        android:id="@+id/fiveKey"
        style="@style/KeyStyle"
        android:text="@string/key_five"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="@+id/asteriskKey"
        app:layout_constraintBottom_toBottomOf="@+id/asteriskKey"
        app:layout_constraintLeft_toRightOf="@+id/fourKey"
        app:layout_constraintRight_toLeftOf="@+id/sixKey" />

    <TextView
        android:id="@+id/sixKey"
        style="@style/KeyStyle"
        android:text="@string/key_six"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="@+id/asteriskKey"
        app:layout_constraintBottom_toBottomOf="@+id/asteriskKey"
        app:layout_constraintLeft_toRightOf="@+id/fiveKey"
        app:layout_constraintRight_toLeftOf="@+id/dotKey" />

    <TextView
        android:id="@+id/dotKey"
        style="@style/KeyStyle"
        android:text="@string/key_dot"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="@+id/asteriskKey"
        app:layout_constraintBottom_toBottomOf="@+id/asteriskKey"
        app:layout_constraintLeft_toRightOf="@+id/sixKey"
        app:layout_constraintRight_toRightOf="parent" />

    <!-- Third Line -->

    <TextView
        android:id="@+id/slashKey"
        style="@style/KeyStyle"
        android:text="@string/key_slash︎"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/asteriskKey"
        app:layout_constraintBottom_toTopOf="@+id/languageKey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/sevenKey" />

    <TextView
        android:id="@+id/sevenKey"
        style="@style/KeyStyle"
        android:text="@string/key_seven"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="@+id/slashKey"
        app:layout_constraintBottom_toBottomOf="@+id/slashKey"
        app:layout_constraintLeft_toRightOf="@+id/slashKey"
        app:layout_constraintRight_toLeftOf="@+id/eightKey" />

    <TextView
        android:id="@+id/eightKey"
        style="@style/KeyStyle"
        android:text="@string/key_eight"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="@+id/slashKey"
        app:layout_constraintBottom_toBottomOf="@+id/slashKey"
        app:layout_constraintLeft_toRightOf="@+id/sevenKey"
        app:layout_constraintRight_toLeftOf="@+id/nineKey" />

    <TextView
        android:id="@+id/nineKey"
        style="@style/KeyStyle"
        android:text='@string/key_nine'
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="@+id/slashKey"
        app:layout_constraintBottom_toBottomOf="@+id/slashKey"
        app:layout_constraintLeft_toRightOf="@+id/eightKey"
        app:layout_constraintRight_toLeftOf="@+id/backspaceKey" />

    <TextView
        android:id="@+id/backspaceKey"
        style="@style/KeyStyle"
        android:text="@string/key_backspace"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="@+id/slashKey"
        app:layout_constraintBottom_toBottomOf="@+id/slashKey"
        app:layout_constraintLeft_toRightOf="@+id/nineKey"
        app:layout_constraintRight_toRightOf="parent" />

    <!-- Fourth Line -->

    <TextView
        android:id="@+id/languageKey"
        style="@style/KeyStyle"
        android:text="@string/key_language"
        android:textSize="14sp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/slashKey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/hanjaNumberPunctuationKey" />

    <TextView
        android:id="@+id/hanjaNumberPunctuationKey"
        style="@style/KeyStyle"
        android:text="@string/key_hanja_number_punctuation"
        android:textSize="14sp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="@+id/languageKey"
        app:layout_constraintBottom_toBottomOf="@+id/languageKey"
        app:layout_constraintLeft_toRightOf="@+id/languageKey"
        app:layout_constraintRight_toLeftOf="@+id/zeroKey" />

    <TextView
        android:id="@+id/zeroKey"
        style="@style/KeyStyle"
        android:text="@string/key_zero"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="@+id/languageKey"
        app:layout_constraintBottom_toBottomOf="@+id/languageKey"
        app:layout_constraintLeft_toRightOf="@+id/hanjaNumberPunctuationKey"
        app:layout_constraintRight_toLeftOf="@+id/spaceKey" />

    <TextView
        android:id="@+id/spaceKey"
        style="@style/KeyStyle"
        android:text="@string/key_space"
        android:textSize="14sp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="@+id/languageKey"
        app:layout_constraintBottom_toBottomOf="@+id/languageKey"
        app:layout_constraintLeft_toRightOf="@+id/zeroKey"
        app:layout_constraintRight_toLeftOf="@+id/enterKey" />

    <TextView
        android:id="@+id/enterKey"
        style="@style/KeyStyle"
        android:text="@string/key_enter"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="@+id/languageKey"
        app:layout_constraintBottom_toBottomOf="@+id/languageKey"
        app:layout_constraintLeft_toRightOf="@+id/spaceKey"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>